--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-hiiii
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+  <header class="hero">
+    <h1>Hi, I’m Ledio 👋</h1>
+    <p>Automation / DevOps / Tech Enthusiast</p>
+  </header>
+
+  <section class="about">
+    <h2>About me</h2>
+    <p>
+      I’m building this portfolio as a hands-on exercise with GitHub Pages
+      and CI/CD basics.
+    </p>
+  </section>
+
+  <section class="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>🚀 Portfolio website (this one)</li>
+      <li>⚙️ Automation projects (coming soon)</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2026 Ledio</p>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+</html>
