new fitures to my site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="hero">
-    <h1>Hi, I’m LedioHHHHHH 👋</h1>
+    <h1>Hi, I’m Ledio 👋</h1>
     <p>Automation / DevOps / Tech Enthusiast</p>
   </header>
 
@@ -32,6 +32,22 @@
   <footer>
     <p>© 2026 Ledio</p>
   </footer>
+
+    <section class="linux-commands">
+      <h2>Linux Commands</h2>
+      <ul>
+        <li>
+          <strong>ls -l</strong>: Lists files in long format, showing permissions, owner, size, and date.
+        </li>
+        <li>
+          <strong>cd /path/to/dir</strong>: Changes the current directory to the specified path.
+        </li>
+        <li>
+          <strong>grep 'pattern' file.txt</strong>: Searches for a pattern in a file and prints matching lines.
+        </li>
+        <!-- Add more commands and descriptions as needed -->
+      </ul>
+    </section>
 
   <script src="js/main.js"></script>
 </body>
