--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
   </section>
 
   <footer>
-    <p>© 2026 Ledio</p>
-  </footer>
+  <!-- Footer moved to bottom -->
 
     <section class="linux-commands">
       <h2>Linux Commands</h2>
@@ -48,6 +47,10 @@
         <!-- Add more commands and descriptions as needed -->
       </ul>
     </section>
+
+    <footer>
+      <p>© 2026 Ledio</p>
+    </footer>
 
   <script src="js/main.js"></script>
 </body>
