--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           <li>
             <strong>grep 'pattern' file.txt</strong>: Searches for a pattern in a file and prints matching lines.
           </li>
+          <li>
+            <strong>start file.txt</strong>: Opens a txt file and starts to display its contents.
+          </li>
+
           <!-- Add more commands and descriptions as needed -->
         </ul>
       </section>
